--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
 	},
 	"require": {
 		"php": ">=7.1",
-		"phpstan/phpstan": "dev-master"
+		"phpstan/phpstan": "^0.7"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^6.2"
