--- a/phpstan-rules.neon
+++ b/phpstan-rules.neon
@@ -1,5 +1,10 @@
 services:
   -
+    class: Mhujer\PHPStanRules\Rules\ClassUsesConsistenceObjectPrototypeRule
+    tags:
+      - phpstan.rules.rule
+
+  -
     class: Mhujer\PHPStanRules\Rules\ConstructorIsFirstMethodInClassRule
     tags:
       - phpstan.rules.rule
