--- a/composer.json
+++ b/composer.json
@@ -15,24 +15,19 @@
 		}
 	},
 	"autoload-dev": {
-		"classmap": [
-			"vendor/phpstan/phpstan/tests/PHPStan",
-			"vendor/phpstan/phpstan/tests/TestCase.php",
-			"tests/Rules"
-		],
+		"autoload-dev": {
+			"classmap": ["tests/"]
+		},
 		"psr-4": {
 			"Mhujer\\PHPStanRules\\": "tests/"
 		}
 	},
-	"config": {
-		"preferred-install": "source"
-	},
 	"require": {
 		"php": ">=7.1",
-		"consistence/consistence": "~0.22|~1.0",
-		"phpstan/phpstan": "^0.7"
+		"consistence/consistence": "~1.0",
+		"phpstan/phpstan": "^0.9.1"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "^6.2"
+		"phpunit/phpunit": "6.5.5"
 	}
 }
