--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
 	"require-dev": {
 		"consistence/coding-standard": "2.2.1",
 		"jakub-onderka/php-parallel-lint": "0.9.2",
-		"phpunit/phpunit": "6.5.5"
+		"phpunit/phpunit": "6.5.5",
+		"satooshi/php-coveralls": "1.1.0"
 	},
 	"config": {
 		"sort-packages": true
