--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -22,4 +22,9 @@
 			<directory>src</directory>
 		</whitelist>
 	</filter>
+
+	<logging>
+		<log type="coverage-clover" target="build/logs/clover.xml"/>
+		<log type="coverage-html" target="build/logs/coverage-report"/>
+	</logging>
 </phpunit>
