--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
 		"classmap": ["tests/"]
 	},
 	"require": {
-		"php": ">=7.1",
+		"php": "^7.2",
 		"phpstan/phpstan": "^0.11"
 	},
 	"require-dev": {
