--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,11 @@
 	"autoload-dev": {
 		"classmap": ["tests/"]
 	},
+	"minimum-stability": "dev",
+	"prefer-stable": true,
 	"require": {
 		"php": "^7.2",
-		"phpstan/phpstan": "^0.11"
+		"phpstan/phpstan": "^0.12"
 	},
 	"require-dev": {
 		"consistence/coding-standard": "3.9",
