--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
 		"classmap": ["tests/"]
 	},
 	"require": {
-		"php": "^7.2",
+		"php": "^7.2 || ~8.0",
 		"phpstan/phpstan": "^0.12"
 	},
 	"require-dev": {
