compatibility with PHPStan 1.0

--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,15 @@
 	},
 	"require": {
 		"php": "~8.0 || ~8.1",
-		"phpstan/phpstan": "^0.12.60"
+		"phpstan/phpstan": "^1.0"
 	},
 	"require-dev": {
 		"consistence-community/coding-standard": "3.11.1",
 		"php-parallel-lint/php-parallel-lint": "1.3.1",
 		"phpunit/phpunit": "9.5.10"
+	},
+	"conflict": {
+		"nikic/php-parser": "<4.13.0"
 	},
 	"config": {
 		"sort-packages": true
@@ -41,7 +44,7 @@
 		"phplint": "parallel-lint -j 10 --exclude var --exclude vendor .",
 		"phpcs": "phpcs --standard=phpcs.xml --extensions=php --encoding=utf-8 --tab-width=4 -sp src tests",
 		"phpcbf": "phpcbf --standard=phpcs.xml --extensions=php --encoding=utf-8 --tab-width=4 -sp src tests",
-		"phpstan": "phpstan analyse -c phpstan.neon src tests --level 7 --no-progress",
+		"phpstan": "phpstan analyse -c phpstan.neon src --level 8 --no-progress",
 		"test": "phpunit"
 	}
 }
